# snake

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  snake.c  snake.h
